# toy-pose-graph-optimization-ceres

./: .gitignore  CMakeLists.txt  README.md  ceres_try.cpp  ceres_vertigo.cpp  plot_results.py
